Prevent "Mark as read" and title-overflow text from overlapping
If the echo-overlay-title-overflow text is too long, it's wrapped into multiple lines now.

Bug: 55919

--- a/modules/overlay/ext.echo.overlay.css
+++ b/modules/overlay/ext.echo.overlay.css
@@ -72,15 +72,13 @@
 	/*border-bottom: 1px solid #A7D7F9;*/
 	font-size: 13px;
 	line-height: 15px;
-	height: 15px;
 	padding: 15px 15px 15px 28px;
 	border-bottom: 1px solid #DDDDDD;
-	position: relative;
 }
 #mw-echo-overlay-title-text {
-	display: inline-block;
-	*display: inline;
+	display: inline;
 	zoom: 1;
+	white-space: normal;
 }
 #mw-echo-overlay-moreinfo-link {
 	display: inline-block;
@@ -155,9 +153,8 @@
 }
 
 #mw-echo-mark-read-button {
-	position: absolute;
-	bottom: 12px;
-	right: 15px;
+	float: right;
+	margin: -1px 0 0 10px;
 	padding: 1px 8px;
 	font-size: 11px;
 	line-height: 15px;
